# ymir-executor-verifier

./: README.md  changelog.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  start.sh
docs/overview/: config.md  dataset.md  framework.md  introduction.md  quick_start.md
src/: cmd.py  pipeline.py  utils.py  verifier.py  verifier_detection.py  verifier_segmentation.py
tests/: test_docker.py
tests/configs/: all-in-one.yaml  automl-all-in-one.yaml  config.yaml  ddp-all-in-one.yaml  env.yaml  live-code-config.yaml  mmdet-all-in-one.yaml  mmseg.yaml  mmyolo_hyper_parameters.yaml  param-config.yaml  test-config.yaml  ymir1.3-env.yaml  yolov5_hyper_parameters.yaml
tests/data/: env.yaml  user-config.yaml
tools/: interactive_test.sh  test.py  test_all_in_one.py  test_hyper_parameter.py  test_live_code.py  test_segmentation.py  test_tmi.py  test_training.py
